  - Removed Config Option: plugin.database.flatfile_backup
  - New Config Option: plugin.database.flatfile_backup_type
    - default: tar
    - Valid entries are: tar for tar.gz and zip for zip, use none for no backup.
  - Allow for nations and towns to set tags less than 4 characters.
0.96.2.8:
  - Fix Nations generating debt accounts.
  - Hotfix: Fix file IO synchronization, courtesy of silverwolfg11 with PR #4210.
  - Remove Manual Config Changes and Migrate them automatically instead, courtesy of Siris with PR #4209.
    - Expect REQUIRED CHANGES in the updating process to become very infrequent.
  - Fix for confirmations' clickable commands executing wrong command.
    - Closes #4215.
0.96.2.9: 
  - Fix help menu's language strings not being retranslated when /ta reload lang is used.
    - Closes #4220.
  - Fix cancelling a spawn causing an NPE.
    - Closes #4218.
  - Fix being able to confirm cancelled confirmations.
  - Clean up HelpMenu, courtesy of silverwolfg11 with PR #4223.
  - Fix new day task not collecting taxes properly, courtesy of silverwolfg11 with PR #4225.
0.96.2.10:
  - Prevent residents from being able to unclaim homeblocks, courtesy of silverworlfg11 with PR #4228.
    - Closes #4231.
  - Fix ClassNotFound exception due to old bungeecord version, courtesy of silverwolfg11 with PR #4238.
  - Fix taxes being below 0, courtesy of silverwolfg11 with PR #4243.
  - Fix economy bug with town confirmation, courtesy of silverwolfg11 with PR #4241.
  - GM Source fetching player suffix instead of prefix, courtesy of ElgarL with PR #4247.
    - Also fixes GM repo and solves issue with building Towny from source.
  - Update Reserve/TheNewChat maven repositories, courtesy of creatorfromhell with PR #4240.
0.96.2.11:
  - Fix shaded dependencies, courtesy of silverwolfg11 with PR #4254.
  - Fix global_town_settings.maximum_number_residents_without_nation not actually accounting for a town that does have a nation.
    - Closes #4249.