@@ -1317,7 +1317,7 @@ public class NationCommand extends BaseCommand implements CommandExecutor {
 			if (TownySettings.getNationRequiresProximity() > 0) {
 				List<Town> towns = nation.getTowns();
 				towns.addAll(remainingNation.getTowns());
-				List<Town> removedTowns = remainingNation.recheckTownDistanceDryRun(towns);
+				List<Town> removedTowns = remainingNation.recheckTownDistanceDryRun(towns, remainingNation.getCapital());
 				if (!removedTowns.isEmpty()) {
 					TownyMessaging.sendMessage(nation.getKing(), Translation.of("msg_warn_the_following_towns_will_be_removed_from_your_nation", StringMgmt.join(removedTowns, ", ")));
 					TownyMessaging.sendMessage(remainingNation.getKing(), Translation.of("msg_warn_the_following_towns_will_be_removed_from_your_nation", StringMgmt.join(removedTowns, ", ")));
@@ -2263,7 +2263,7 @@ public class NationCommand extends BaseCommand implements CommandExecutor {
 					else {
 						// Do proximity tests.
 						if (TownySettings.getNationRequiresProximity() > 0 ) {
-							List<Town> removedTowns = nation.recheckTownDistanceDryRun(nation.getTowns());
+							List<Town> removedTowns = nation.recheckTownDistanceDryRun(nation.getTowns(), newCapital);
 							
 							// There are going to be some towns removed from the nation, so we'll do a Confirmation.
 							if (!removedTowns.isEmpty()) {
